--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack -p",
-    "start": "APP_ENV=dev webpack"
+    "build": "webpack --mode production -p",
+    "start": "APP_ENV=dev webpack --mode development"
   },
   "dependencies": {
     "autoprefixer": "^9.1.0",
