--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^9.1.0",
+    "bulma": "^0.7.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "csswring": "^7.0.0",
