--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "APP_ENV=dev webpack --mode development"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
     "autoprefixer": "^9.1.0",
     "bulma": "^0.7.1",
     "clean-webpack-plugin": "^0.1.19",
