--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^4.9.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
+    "scrolltrigger": "^1.0.1",
     "style-loader": "^0.22.1",
     "webpack": "^4.16.5",
     "webpack-browser-plugin": "^1.0.20",
