indexの基礎を作成

--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,9 @@ title = "lightly"
 canonifyURLs=false
 relativeURLs=true
 
+[permalinks]
+  post= "/:section/:title"
+
 [build]
   command = "yarn build"
   publish = "dist"
