やはりタグも欲しいので管理できるよう作成

--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ disableHugoGeneratorInject = true
 
 [taxonomies]
   category = "categories"
+  tag = "tags"
 
 [permalinks]
   blog = "/:section/:year/:month/:title"
