--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ title = "lightly"
 canonifyURLs = false
 relativeURLs = true
 disableHugoGeneratorInject = true
+hasCJKLanguage = true
 
 [taxonomies]
   category = "categories"
