--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.9.3",
     "postcss-loader": "^3.0.0",
+    "rfs": "^8.0.4",
     "sass-loader": "^7.1.0",
     "scrolltrigger-classes": "^0.3.6",
     "style-loader": "^0.22.1",
