--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://www.t4traw.net"
 languageCode = "ja-ja"
-title = "じんせいをかくかくかく"
+title = "すきなものをすきといえるせかいにしたい"
 canonifyURLs = false
 relativeURLs = true
 disableHugoGeneratorInject = true
