--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "webpack-cli": "^3.1.0",
     "webpack-manifest-plugin": "^2.0.3",
     "webpack-serve": "^2.0.2",
-    "webpack-shell-plugin": "^0.5.0"
+    "webpack-shell-plugin": "^0.5.0",
+    "axios": ">=0.18.1",
+    "fstream": ">=1.0.12",
+    "tar": ">=2.2.2"
   }
 }
