--- a/package.json
+++ b/package.json
@@ -10,25 +10,29 @@
   "dependencies": {
     "animate.css": "^3.7.0",
     "autoprefixer": "^9.1.0",
+    "axios": ">=0.18.1",
     "bulma": "^0.7.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
+    "cssnano": "^4.1.10",
     "csswring": "^7.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "fstream": ">=1.0.12",
+    "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.9.3",
     "postcss-loader": "^3.0.0",
+    "purgecss": "^1.3.0",
+    "purgecss-webpack-plugin": "^1.5.0",
     "rfs": "^8.0.4",
     "sass-loader": "^7.1.0",
     "scrolltrigger-classes": "^0.3.6",
     "style-loader": "^0.22.1",
+    "tar": ">=2.2.2",
     "webpack": "^4.16.5",
     "webpack-browser-plugin": "^1.0.20",
     "webpack-cli": "^3.1.0",
     "webpack-manifest-plugin": "^2.0.3",
     "webpack-serve": "^2.0.2",
-    "webpack-shell-plugin": "^0.5.0",
-    "axios": ">=0.18.1",
-    "fstream": ">=1.0.12",
-    "tar": ">=2.2.2"
+    "webpack-shell-plugin": "^0.5.0"
   }
 }
