--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.t4traw.net/"
+baseURL = "https://www.t4traw.net"
 languageCode = "ja-ja"
 title = "すきせか"
 canonifyURLs = false
