gtagに関する@types追加

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rehype-raw": "^5.1.0"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.8",
     "@types/node": "^16.9.6",
     "@types/react": "^17.0.24",
     "autoprefixer": "^10.3.1",
