--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactblog",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "new": "node bin/new_post.js",
     "dev": "next dev",
@@ -11,8 +12,8 @@
   },
   "dependencies": {
     "babel-plugin-prismjs": "^2.1.0",
+    "glob": "^7.2.0",
     "gray-matter": "^4.0.3",
-    "grob": "^1.0.0",
     "next": "^12.0.10",
     "prismjs": "^1.26.0",
     "raw-loader": "^4.0.2",
@@ -26,6 +27,7 @@
     "@types/gtag.js": "^0.0.8",
     "@types/node": "^16.9.6",
     "@types/react": "^17.0.24",
+    "@types/webpack-env": "^1.16.3",
     "autoprefixer": "^10.4.2",
     "date-utils": "^1.2.21",
     "npm-check-updates": "^12.1.0",
