--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "reactblog",
-  "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "new": "node bin/new_post.js",
-    "dev": "next dev",
+    "new": "npx tsx bin/new_post.js",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "update": "npx npm-check-updates"
@@ -14,27 +11,26 @@
     "babel-plugin-prismjs": "^2.1.0",
     "glob": "^7.2.0",
     "gray-matter": "^4.0.3",
-    "next": "^12.0.10",
-    "prismjs": "^1.26.0",
+    "next": "^12.1.0",
+    "prismjs": "^1.27.0",
     "raw-loader": "^4.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "^7.1.2",
+    "react-markdown": "^8.0.0",
     "react-syntax-highlighter": "^15.4.5",
     "rehype-raw": "^6.1.1"
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.8",
-    "@types/node": "^16.9.6",
-    "@types/react": "^17.0.24",
+    "@types/node": "^17.0.18",
+    "@types/react": "^17.0.39",
     "@types/webpack-env": "^1.16.3",
     "autoprefixer": "^10.4.2",
-    "date-utils": "^1.2.21",
-    "npm-check-updates": "^12.1.0",
-    "postcss": "^8.4.5",
+    "npm-check-updates": "^12.3.1",
+    "postcss": "^8.4.6",
     "rfs": "^9.0.6",
-    "sass": "^1.48.0",
-    "tailwindcss": "^3.0.13",
-    "typescript": "^4.4.3"
+    "sass": "^1.49.8",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.5.5"
   }
 }
