--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/gtag.js": "^0.0.8",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "autoprefixer": "^10.4.0",
     "babel-plugin-prismjs": "^2.1.0",
     "glob": "^7.2.0",
