--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/gtag.js": "^0.0.8",
     "@types/node": "17.0.4",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "17.0.38",
     "@types/react-syntax-highlighter": "^13.5.2",
     "autoprefixer": "^10.4.0",
